0025417: Visualization, OpenGl_Context - fix preprocessor check to load GL functions on OS X